--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gray-matter": "^4.0.3",
     "next": "^15.0.0",
     "nodemailer": "^7.0.10",
+    "openai": "^6.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "remark": "^15.0.1",
