--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.555.0",
     "next": "^15.0.0",
     "nodemailer": "^7.0.10",
     "openai": "^6.9.1",
