--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
+  "regions": ["bom1"],
   "functions": {
     "src/app/api/**/*.ts": {
-      "runtime": "nodejs22.x",
-      "regions": ["bom1"]
+      "runtime": "nodejs22.x"
     }
   },
   "headers": [
