Fix vercel.json: remove invalid runtime field, keep functions config

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "regions": ["bom1"],
   "functions": {
     "src/app/api/**/*.ts": {
-      "runtime": "nodejs22.x"
+      "maxDuration": 10
     }
   },
   "headers": [
