--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
   "functions": {
     "src/app/api/**/*.ts": {
       "maxDuration": 10
+    },
+    "api/**/*.py": {
+      "runtime": "python3.9",
+      "maxDuration": 60
     }
   },
   "headers": [
