Refactor solar API to FastAPI with gpt-image-1 integration

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
   "functions": {
     "src/app/api/**/*.ts": {
       "maxDuration": 10
+    },
+    "api/solar.py": {
+      "maxDuration": 60,
+      "runtime": "python3.9"
     }
   },
   "headers": [
