--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,12 @@
       "maxDuration": 60
     }
   },
+  "rewrites": [
+    {
+      "source": "/api/solar/:path*",
+      "destination": "/api/solar"
+    }
+  ],
   "headers": [
     {
       "source": "/(.*)",
