--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,9 @@
     },
     "api/solar.py": {
       "maxDuration": 60
+    },
+    "api/test.py": {
+      "maxDuration": 10
     }
   },
   "headers": [
