Refactor: Move Python API to api_py/ and update routing for Vercel - Move all Python functions from api/ to api_py/ to avoid Next.js route conflicts - Remove /api/solar prefix from FastAPI routes - Add Vercel rewrites to expose Python functions at /python/* - Update frontend API base URLs to /python/solar - Move runtime.txt to root with Python 3.11 - Update test handler signature for Vercel compatibility

--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,23 @@
     "src/app/api/**/*.ts": {
       "maxDuration": 10
     },
-    "api/solar.py": {
+    "api_py/*.py": {
       "maxDuration": 60
     },
-    "api/test.py": {
-      "maxDuration": 10
+    "api_py/solar.py": {
+      "maxDuration": 60
     }
   },
+  "rewrites": [
+    {
+      "source": "/python/:path*",
+      "destination": "/api_py/:path*"
+    },
+    {
+      "source": "/python/solar/:path*",
+      "destination": "/api_py/solar.py"
+    }
+  ],
   "headers": [
     {
       "source": "/(.*)",
