Fix Python serverless functions: Use ASGI app export per Vercel docs
- Export FastAPI app directly (ASGI) instead of Mangum wrapper
- Configure root_path for proper routing
- Add excludeFiles to reduce bundle size
- Follow Vercel Python runtime documentation for ASGI apps

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
       "maxDuration": 10
     },
     "api/python/**/*.py": {
-      "maxDuration": 60
+      "maxDuration": 60,
+      "excludeFiles": "**/node_modules/**"
     }
   },
   "rewrites": [
