Fix Python serverless functions: Move to api/ and fix configuration
- Move Python functions from api/python/ to api/ (Vercel's expected location)
- Fix root_path to /python/solar (public URL) instead of /api/python/solar
- Update vercel.json to match new file structure with explicit function paths
- Update runtime.txt to Python 3.12 (Vercel's current version)
- Fix path references in solar.py for new location
- Improve test handler with better logging

This fixes the 405 and 500 errors by ensuring:
1. Vercel recognizes Python functions in the correct location
2. FastAPI routes match correctly with the public URL structure
3. Functions are properly configured in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -4,19 +4,22 @@
     "src/app/api/**/*.ts": {
       "maxDuration": 10
     },
-    "api/python/**/*.py": {
+    "api/solar.py": {
       "maxDuration": 60,
       "excludeFiles": "**/node_modules/**"
+    },
+    "api/test.py": {
+      "maxDuration": 10
     }
   },
   "rewrites": [
     {
       "source": "/python/solar/:path*",
-      "destination": "/api/python/solar/:path*"
+      "destination": "/api/solar/:path*"
     },
     {
       "source": "/python/test",
-      "destination": "/api/python/test"
+      "destination": "/api/test"
     }
   ],
   "headers": [
