Fix Python serverless function routing and clean up structure
- Move api/solar.py to api/solar/index.py for better Vercel routing
- Remove root_path configuration (Vercel handles path stripping automatically)
- Clean up duplicate entry points in api_py/ (removed solar.py, test.py)
- Update vercel.json to use directory-based function pattern
- Add README.md documenting the api/ and api_py/ structure
- Fix rewrite pattern to use proper regex capture groups

This should fix the 405 error by ensuring Vercel correctly routes
requests to the Python serverless function.

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     "src/app/api/**/*.ts": {
       "maxDuration": 10
     },
-    "api/solar.py": {
+    "api/solar/**/*.py": {
       "maxDuration": 60,
       "excludeFiles": "**/node_modules/**"
     },
@@ -14,8 +14,8 @@
   },
   "rewrites": [
     {
-      "source": "/python/solar/:path*",
-      "destination": "/api/solar/:path*"
+      "source": "/python/solar/(.*)",
+      "destination": "/api/solar/$1"
     },
     {
       "source": "/python/test",
