Fix Vercel Python functions: Use BaseHTTPRequestHandler, fix ASGI routing, and fix SVG path errors

--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
   "rewrites": [
     {
       "source": "/python/solar/(.*)",
-      "destination": "/api/solar/$1"
+      "destination": "/api/solar"
     },
     {
       "source": "/python/test",
