--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.24.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "framer-motion": "^12.23.26",
     "gray-matter": "^4.0.3",
     "next": "^15.5.7",
     "nodemailer": "^7.0.10",
