--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "openai": "^6.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
   },
